docs(Promise):Promise学习
了解Promise的创建，存放数据，读取数据，三个状态，链式调用，静态方法

Closes #101

--- a/笔记.md
+++ b/笔记.md
@@ -56,6 +56,112 @@ node.js 和 javascript 的区别 ：
 
 ## Promise 
 
-​      是一个用来存放数据的对象
+​	是一个用来存放数据的对象	
 
-​      他的特殊的存储方法使得他可以存放异步调用的数据
+​	他的特殊的存储方法使得他可以存放异步调用的数据
+
+​	用于解决回调函数实现异步时的会回调地狱
+
+### 创建 
+
+​	通过构造函数 new Promise() 创建一个Promise实例
+
+​	必须为构造函数添加一个回调函数作为参数（通过这个回调函数的参数来存放异步数据）
+
+​	回调函数参数 ： 一般写为 ： resolve 和reject。两个参数都是一个函数
+
+​	resolve 将会在程序正常运行时向Promise存放数据，reject将会在程序出错时向Promise存放数据
+
+### 读取 
+
+​	实例方法 ：
+
+​	then()
+
+​		两个参数 ： 都是回调函数，第一个参数可以用于读取resolve存放的数据，可以写入处理正常运行数据的代码；第二个参数可以读取reject存放的数据或者代码异常数据，可以写入处理异常运行数据的代码
+
+​	catch() :
+
+​		一个参数（回调函数），会在读取reject存放或者代码出错时（即Promise被拒接时）执行
+
+​		专门处理Promise异常
+
+​		相当于then()，只不过第一个参数为null
+
+​	finally() : 
+
+​		无论是正常存储数据还是出现异常，finally都会执行
+
+​		finally的回调函数中，不会接受存放在实例中的数据。
+
+​		用于编写一些无论是否成功都要执行的代码
+
+### 两个隐藏属性 
+
+​	PromiseResult ：存放数据
+
+​	PromsieState  ：描述Promise的三个状态
+
+​			pending :（数据正在存储进行中）
+
+​			fulfilled :  (完成) 通过resolve存放数据时
+
+​			rejected : （拒绝，出错）通过reject存放数据时
+
+​		PromiseState只允许修改一次，之后无法进行修改
+
+### 执行流程
+
+​	首先通过构造函数创建一个Promise实例，实例的PromiseState将会设置为pending
+
+​	当使用resolve存放数据时，PromiseState将会被设置为fulfilled
+
+​	当使用reject存放数据或者代码出错时，PromiseState将被设置为rejected
+
+​	当调用实例方法then时，会根据PromiseState的状态进行调用回调函数，fulfilled将调用第一个回调函数，rejected将
+
+会调用第二个回调函数
+
+### 链式调用
+
+​	基础 ：
+
+​		then、catch、finally三个方法调用时，会返回一个新的Promise对象，并将返回值存放到新Promise对象中（finally并不会）。
+
+​	省略 ：
+
+​		在链式调用中，如果当前的then或catch在读取上一个Promsie的存放的数据时（正常返回或异常信息），如果没有成功读到，将会直接跳过这个读取，转而进行下一个读取。
+
+​	catch读错 ：
+
+​		在链式调用中，catch只会读取他之前的错误，他后面的错误包括他本身的错误是不在这个catch读取范围内的，只能通过后面的catch读取
+
+### Promsie的静态方法 
+
+​	Promise.resolve() : 创建一个立即完成的Promise ，参数就是存放数据
+
+​		相当与 ： new Promise((resolve,reject) => { resolve() })
+
+​	Promise.reject() : 创建一个立即拒接的Promise ，功能与Promise.resolve一致
+
+​	Promise.all() ： 
+
+​		参数是一个迭代器（数组...），会返回一个数组，里面存放了参数迭代器中所有的Promise的运行结果。
+
+​		其中当有一个Promise 是拒接的，将会抛出错误，一错全没
+
+​	Promise.allsettled() ：
+
+​		参数是一个迭代器（数组...），会返回一个对象数组，无论是否成功，Promise的状态和执行结果都存放在对象汇总
+
+​	Promise.race() ：
+
+​		参数是一个迭代器（数组...），所有Promise会一起执行，并返回一个最快执行的Promise数据
+
+​	Promise.any() ：
+
+​		参数是一个迭代器（数组...），所有Promise会一起执行，并返回一个最快执行并完成的Promise数据
+
+新知识
+
+​	throw new Error() : 自定义一个异常情况，可以传递参数来当做异常信息
