docs(模块化)：CommonJS、ES
CommonJS的引入（require）和暴露（exports、module.exports）;ES的引入（import）和读取（export）

Closes #101

--- a/笔记.md
+++ b/笔记.md
@@ -162,6 +162,68 @@ node.js 和 javascript 的区别 ：
 
 ​		参数是一个迭代器（数组...），所有Promise会一起执行，并返回一个最快执行并完成的Promise数据
 
+### async 和 await 
+
+​	async  ：快速创建一个异步函数，函数返回一个Promsie	
+
+​		通过async修饰的函数，将会自动变为异步函数，并将该函数的返回值封装到一个Promise中
+
+​	await ： 
+
+​		当通过await去调用异步函数时，会暂停代码的执行，等到异步代码执行完毕后，有结果后返回结果
+
+​		只能使用在async创建的异步函数中或者在ES模块的顶级作用域中
+
+​		await在调用异步代码时，使用try-catch 语句来处理错误信息
+
+​		 当使用await 调用函数时，会将后续的代码在函数执行完毕后，放入微任务队列(一个await,就指将后面代码放入一个then中)   
+
+​		 await 不会影响到异步函数外的代码，但会影响到异步函数中await代码的后面代码（但是后面的代码是必须需要这个结果的，所有对后续代码无影响）
+
+## 模块化
+
+​	当一个js文件中实现的功能较多，代码数量大时，会导致代码维护难度加大，通过将不同功能写在不同的js文件中，然后全部引进一个文件的模式较之前的维护难度上更加简单方便，称后面的方式为模块化
+
+​	早期网页中，没有模块化的规范，往往通过script标签来引入多个js文件。
+
+​	引入的js代码完成的功能并不是按需引用，存在大量不需要的功能。并且在复杂情况下，非常容易出错（顺序不同...导致错误）
+
+### 	CommonJS 
+
+​		是 node.js 默认支持的模块化规范 （早期官方并未给出规范，直到15年才出现,前面就是民间自创）
+
+​		cjs 、默认js、默认json都属于CommonJs规范
+
+​		引入 ：
+
+​			require（"路径"） ： 函数来引入模块 （可以省略扩展名）
+
+​			引入自定义模块 ：
+
+​				使用相对路径 ，未写扩展名时，node会自动补充，会优先查找js文件 ，在查json
+
+​			引入核心模块 ：  直接写核心模块的名字 或者 node：名字（速度快）	
+
+​			 引入文件夹中的所有模块 : 
+
+​				引入文件夹中的入口文件 : index.js(已经将其他模块放入在一起)
+
+​				但单独引入文件夹时,会默认查找index.js文件
+
 新知识
 
 ​	throw new Error() : 自定义一个异常情况，可以传递参数来当做异常信息
+
+​	try-catch 语句 
+
+​	
+
+```
+try {
+	正常时执行这一部分内容
+}catch(error) {
+	错误时执行这一部分内容
+	console.log(error);
+}
+```
+
